fixes: font-style for nested element + bootstrap modification for margin and text alignment

--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,10 @@ html {
 .navbar {
   background-color: transparent !important;
 }
+.navbar a,
+button {
+  font-family: "Franklin Gothic Medium" !important;
+}
 
 .main-container {
   width: 100%;
